<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:id="@+id/rootLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextCourse1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_1"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextCourse2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_2"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextCourse3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_3"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextCourse4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_4"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editTextCourse5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/course_5"
            android:inputType="text"
            android:padding="8dp"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonComputeGPA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compute_gpa"
            android:textSize="18sp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/textViewGPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gpa"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

    </LinearLayout>
</ScrollView>
